Titles changed to "thelist.app"

--- a/public/index.html
+++ b/public/index.html
@@ -24,12 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Shopping List</title>
+    <title>thelist.app</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <h1>Shopping List</h1>
+    <h1>thelist.app</h1>
     <h2>Put it on the list!</h2>
     <div id="wrapper">
     </div>
