--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <h1>thelist.app</h1>
-    <h2>Put it on the list!</h2>
+    <div id="header">
+    </div>
+
     <div id="wrapper">
     </div>
 
